# SolaTra

./: .gitignore  Cargo.toml  wallet2.json
src/: main.rs
src/query/: query.rs
src/rpc/: rpc.rs
src/transaction/: transaction.rs
src/wallet/: wallet.rs
